# AstroCTC

./: Makefile  README  about_ui.c  astro_main.c  callbacks.c  cam.h  camera.c  camera_info_ui.c  capture_ui.c  codec.h  codec_ui.c  defs.h  gst_view_capture.c  main.h  main_ui.c  other_ctrl_ui.c  preferences.h  prefs_ui.c  profiles_ui.c  session.h  snapshot.c  snapshot_ui.c  utility.c  version.h  view_file_ui.c
AutoTools/: AUTHORS  Makefile.am  configure.ac  setup_AutoTools.sh
AutoTools/data/: Makefile.am  Makefile.in  astroctc.1  astroctc.desktop
AutoTools/data/icons/: Makefile.am  Makefile.in
AutoTools/src/: Makefile.am
DEBS/: control_template
GSTREAMER/: enc_property_details  gst_elements.list  gst_samples  gst_samples.ok
IMAGES/: astroctc.xcf
RELEASES/: README
TEST_CASES/: gst_query_1  reticule.docx  test_cbox_destroy.c
TEST_CASES/v4l2_error_dynamic_cairo/: README  test_dyn  test_dyn.c
TEST_CASES/v4l2_error_dynamic_cairo/tmp/: Makefile  Makefile.valve  test_dyn  test_dyn.c  test_dyn.c.base  test_dyn.c.v1  test_dyn.c.v2  test_dyn.c.v3  test_valve  test_valve.c
TEST_CASES/vaapi_core_dump/: Makefile  README  testcoredump  testcoredump.c  testcoredump.c.v1  testcoredump.c.v2  testcoredump.c.v3  testcoredump.c.v4
src/: Makefile  about_ui.c  astro_main.c  callbacks.c  cam.h  camera.c  camera_info_ui.c  capture_ui.c  codec_ui.c  css.c  defs.h  gst_view_capture.c  main.h  main_ui.c  other_ctrl_ui.c  preferences.h  prefs_ui.c  profiles_ui.c  snapshot.c  snapshot_ui.c  utility.c  version.h  view_file_ui.c
