SUBDIRS = icons
#@INTLTOOL_DESKTOP_RULE@

#if DESKTOP

dist_man_MANS = astroctc.1

applicationsdir = $(datadir)/applications
applications_DATA = astroctc.desktop

#endif

#EXTRA_DIST = $(applications_DATA).in
EXTRA_DIST = $(applications_DATA)

#CLEANFILES = $(applications_DATA)

#clean-generic:
#	test -z "$(applications_DATA)" || rm -f $(applications_DATA);
