# Needs to end up as: /usr/share/icons/hicolor/48x48/apps
icondir = ${datadir}/icons/hicolor/48x48/apps
# Needs to end up as: /usr/share/pixmaps/astroctc
pixmapsdir = ${datadir}/pixmaps/astroctc
icon_DATA = astroctc.png 
pixmaps_DATA = astroctc.png 

dist_doc_DATA = $(icon_DATA)

#EXTRA_DIST = \
#	$(icon_DATA) \
#	$(pixmaps_DATA)

MAINTAINERCLEANFILES = $(icon_DATA)
